<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stranger</string>
    <string name="shake">Shake</string>
    <string name="setting">setting</string>
    <string name="line">line</string>
    <string name="h_shake">摇一摇</string>
    <string name="h_setting">设&#160;&#160;&#160;&#160;置</string>
    <string name="action_settings">Settings</string>
    <string name="action_more">More</string>
    <string name="action_personnal">Personnal</string>
    <string name="time">时 间 :</string>
    <string name="stop">暂停</string>
    <string name="level">等  级 :</string>
    <string name="action_edit_info">编辑</string>
    <string name="action_save_info">保存</string>
    <string name="action_stop">暂停</string>
    <string name="main_title">解密陌生人</string>
    <string name="personnalInfo_me">个人资料</string>
    <string name="personnalInfo_other">TA的资料</string>
    <string name="editPersonnalInfo">编辑资料</string>
    <string name="newFriend">新朋友</string>
    <string name="location">附近的人</string>
    <string name="send">发送</string>
    <string name="add_avator">头像</string>
    <string name="clicksound">语音</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="friend_name"></string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="voice_up_tips_2">按下录音，松开发送</string>
    <string name="voice_up_tips">手指上滑，取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="star_mine">我的星座</string>
    <string name="star_he">星座配对</string>
    <string name="star_both">两情相悦指数</string>
    <string name="star_long">天长地久指数</string>
    <string name="star_comp">配对指数 :</string>
    <string name="star_friendship">友情</string>
    <string name="star_love">爱情</string>
    <string name="star_marry">婚姻</string>
    <string name="star_family">亲情</string>
    <string name="star_special">星座特征</string>
    <string name="star_word">性格代表字汇</string>
    <string name="setgamelevel">设置游戏难度</string>
    <string name="gamelevel1">简单</string>
    <string name="gamelevel2">普通</string>
    <string name="gamelevel3">困难</string>
    <string name="setaddreceipt">是否验证好友添加</string>
    <string name="logout">注销</string>

</resources>