<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.smarthome.MainActivity" >

    
    <item 
        android:id="@+id/action_personnal"
        android:icon="@drawable/action_personnal"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_personnal"/>
    
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/action_more"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_more"/>
    
    <item 
        android:id="@+id/action_edit_info"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_edit_info"/>
    
    <item 
        android:id="@+id/action_save_info"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_save_info"/>
    
    <item 
       android:id="@+id/action_stop"
       android:orderInCategory="100"
       android:showAsAction="always"
       android:title="@string/action_stop" />

</menu>