<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d6d6d6"
    android:orientation="vertical" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="8dp"
        android:background="#d6d6d6" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_gamelevel"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@drawable/word_box"
            android:text="@string/setgamelevel"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="8dp"
        android:background="#d6d6d6" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/word_box" >

        <TextView
            android:id="@+id/tv_addreceipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setaddreceipt"
            android:textSize="20sp" />

        <com.stranger.view.SlipButton
            android:id="@+id/slidebutton_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" >
        </com.stranger.view.SlipButton>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#d6d6d6"
        android:gravity="bottom"
        android:padding="15dp" >

        <Button
            android:id="@+id/info_cancellation"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:background="@drawable/personnal_button_change"
            android:text="@string/logout"
            android:textColor="@drawable/personnal_text_change"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>